# d2os

./: .gitignore  .kernel.c.swp  CMakeLists.txt  Makefile  a.out  kernel.c  kernel.h  linker.ld  printf.c
boot/: Makefile  boot.s  cstart.c
drivers/gpio/: .gpio.h.swp  gpio.h
drivers/uart/: uart.c  uart.h
include/: kernel.h  printf.h
include/kernel/: assembly.h  interrupt.h  io.h  kernel.h  list.h  memory.h  mmu.h  mutex.h  peripheral.h  scheduler.h  smp.h
include/kernel/boot/: atags.h  cpsr.h
include/kernel/drivers/: driver.h  gpio.h  serial.h  timer.h
include/kernel/drivers/gpio/: bcm_2835_gpio.h  gpio.h
include/kernel/drivers/interrupt/: bcm_2835_interrupt.h  bcm_2836_interrupt.h
include/kernel/drivers/ps2/: ps2_keyboard.h
include/kernel/drivers/serial/: bcm_2835_uart.h
include/kernel/drivers/timer/: bcm_2835_timer.h  timer.h
include/kernel/drivers/uart/: uart.h
include/kernel/memory/: memory.h  mmu.h
include/kernel/mm/: memory.h
include/kernel/process/: schedule.h  task.h
include/kernel/processes/: process.h  scheduler.h
include/kernel/utils/: printk.h  string.h
kernel/: interrupt.c  main.c  panic.c
kernel/arch/arm/: CMakeLists.txt  boot.S  interrupt.S  kernel.ld  main.c  memory.c  mmio.c  mutex.S  smp_boot.S
kernel/arch/arm/atags/: atags.c  atags.h
kernel/arch/arm/boards/: bcm_2835.h
kernel/arch/arm/include/: asm.h  peripheral.h
kernel/arch/arm/include/arch/: asm.h  mmu.h  task.h
kernel/arch/arm/include/asm/: asm.h  memory.h  peripheral.h  task.h
kernel/drivers/clock/: bcm_2836_clock.c
kernel/drivers/gpio/: bcm_2835_gpio.c  gpio.c
kernel/drivers/interrupt/: bcm_2835_interrupt.c  bcm_2836_interrupt.c
kernel/drivers/serial/: bcm_2835_uart.c  serial.c
kernel/drivers/timer/: bcm_2835_timer.c  timer.c
kernel/mm/: memory.c
kernel/process/: idle.c  schedule.c  task.c
kernel/utils/: printk.c
src/: kernel.ld  mutex.S
src/kernel/: interrupt.c  kernel.c  memory.c  mmu.c  mutex.S  panic.c  scheduler.c  smp.c  vfp.c  vfp.h
src/kernel/boot/: atags.c  boot.s  cstart.c  interrupt.S  smp_boot.S
src/kernel/boot/armv7/: boot.S  interrupt.S  smp_boot.S
src/kernel/drivers/gpio/: gpio.c
src/kernel/drivers/ps2/: ps2_keyboard.c
src/kernel/drivers/timer/: timer.c
src/kernel/drivers/uart/: uart.c
src/kernel/memory/: memory.c  mmu.S  mmu.c
src/kernel/processes/: idle.c  init.c  process.c  scheduler.c
src/kernel/utils/: printk.c  string.c
toolchain/: arm-none-eabi-rpi2.cmake  arm-none-eabi-rpi3.cmake
