project(kernel_arch_arm C ASM)

set(ARCH_KERNEL_TARGET ${PROJECT_NAME} PARENT_SCOPE)
set(ARCH_KERNEL_TARGET ${PROJECT_NAME})

file(GLOB_RECURSE ARCH_KERNEL_C_SOURCES "*.c")
file(GLOB ARCH_KERNEL_ASM_SOURCES "*.S")

add_library(${ARCH_KERNEL_TARGET} ${ARCH_KERNEL_C_SOURCES} ${ARCH_KERNEL_ASM_SOURCES})
target_include_directories(${ARCH_KERNEL_TARGET} PUBLIC ${KERNEL_INCLUDE_DIR})